--- a/src/guessnum.html
+++ b/src/guessnum.html
@@ -8,8 +8,7 @@
   <title>yeoman</title>
 </head>
 <body>
-  <h1>\Главная/</h1>
-<script src="js/index.js"></script>
-<script src="js/function.js"></script>
+  <h1>\угадай число/</h1>
+<script src="js/guessnum.js"></script>
 </body>
 </html>
