--- a/src/equal3num.html
+++ b/src/equal3num.html
@@ -8,8 +8,7 @@
   <title>yeoman</title>
 </head>
 <body>
-  <h1>\Главная/</h1>
-<script src="js/index.js"></script>
-<script src="js/function.js"></script>
+  <h1>\сравнить 3 числа/</h1>
+<script src="js/equal3num.js"></script>
 </body>
 </html>
