--- a/src/changecolorbyid.html
+++ b/src/changecolorbyid.html
@@ -8,7 +8,11 @@
   <title>yeoman</title>
 </head>
 <body>
-  <h1>\сложить 2 числа/</h1>
-<script src="js/summ2num.js"></script>
+<button class="btn_prompt">Жми</button>
+  <div class="block" id='b1'></div>
+  <div class="block" id='b2'></div>
+  <div class="block" id='b3'></div>
+
+<script src="js/changecolorbyid.js"></script>
 </body>
 </html>
