--- a/src/domsearch.html
+++ b/src/domsearch.html
@@ -26,7 +26,6 @@
     <li>text9</li>
     <li>text10</li>
   </ul>
-<script src="js/index.js"></script>
-<script src="js/function.js"></script>
+<script src="js/domsearch.js"></script>
 </body>
 </html>
