--- a/src/index copy.html
+++ b/src/index copy.html
@@ -8,7 +8,14 @@
   <title>yeoman</title>
 </head>
 <body>
-  <h1>\сложить 2 числа/</h1>
-<script src="js/summ2num.js"></script>
+  <h1>\События/</h1>
+
+<button id='but0'>Click me</button>
+<button id='but1'>Click me</button>
+<button id='but2'>Click me</button>
+<button id='but3'>Click me</button>
+
+<script src="js/index.js"></script>
+<script src="js/function.js"></script>
 </body>
 </html>
