--- a/src/changesizes.html
+++ b/src/changesizes.html
@@ -8,7 +8,13 @@
   <title>yeoman</title>
 </head>
 <body>
-  <h1>\сложить 2 числа/</h1>
-<script src="js/summ2num.js"></script>
+<div class="btn-container">
+  <button class="btn_width">Width</button>
+  <button class="btn_height">Height</button>
+</div>
+
+  <div class="box1" id="one"></div>
+
+<script src="js/changesizes.js"></script>
 </body>
 </html>
