--- a/src/appendelements.html
+++ b/src/appendelements.html
@@ -8,14 +8,8 @@
   <title>yeoman</title>
 </head>
 <body>
-  <h1>\События/</h1>
-
-<button id='but0'>Click me</button>
-<button id='but1'>Click me</button>
-<button id='but2'>Click me</button>
-<button id='but3'>Click me</button>
-
-<script src="js/index.js"></script>
-<script src="js/function.js"></script>
+  <div class="boxline-container"></div>
+  
+<script src="js/appendelements.js"></script>
 </body>
 </html>
