--- a/src/switchtab.html
+++ b/src/switchtab.html
@@ -10,15 +10,14 @@
 <body>
   <div class="tab-container">
     <ul class="tab-wrap">
-      <li><a href="home" class="active">Home</a></li>
-      <li><a href="catalog">Catalog</a></li>
+      <li><a href="#home" class="active">Home</a></li>
+      <li><a href="#catalog">Catalog</a></li>
     </ul>
   </div>
   <div class="tab-content">
     <div class="tab active" id="home">Home content</div>
     <div class="tab" id="catalog">Catalog content</div>
   </div>  
-<script src="js/index.js"></script>
 <script src="js/switchtab.js"></script>
 </body>
 </html>
