--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,35 @@
   <title>yeoman</title>
 </head>
 <body>
-  <h1>\Главная/</h1>
-<script src="js/index.js"></script>
+  <div class="calend-wrap">
+    <div class="calend-header">
+      <p>Year</p>
+      <p>Month</p> 
+    </div>
+    <div class="calent-table">
+      <table>
+        <caption>Today</caption>
+        <tr>
+          <th>Пн</th>
+          <th>Вт</th>
+          <th>Ср</th>
+          <th>Чт</th>
+          <th>Пт</th>
+          <th>Сб</th>
+          <th>Вс</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>1</td>
+          <td>2</td>
+          <td>3</td>
+        </tr>
+      </table>
+    </div>
+  </div>
 <script src="js/function.js"></script>
 </body>
 </html>
