--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
       <p>Year</p>
       <p>Month</p> 
     </div>
-    <div class="calent-table">
-      <table>
+    <div class="calend-table">
+      <table id='tbl'>
         <caption>Today</caption>
         <tr>
           <th>Пн</th>
@@ -24,16 +24,7 @@
           <th>Пт</th>
           <th>Сб</th>
           <th>Вс</th>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td>1</td>
-          <td>2</td>
-          <td>3</td>
-        </tr>
+        </tr>       
       </table>
     </div>
   </div>
