--- a/src/index copy.html
+++ b/src/index copy.html
@@ -1,81 +1,14 @@
-<!DOCTYPE HTML>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <style>
-    table {
-      border-collapse: collapse;
-    }
-
-    td,
-    th {
-      border: 1px solid black;
-      padding: 3px;
-      text-align: center;
-    }
-
-    th {
-      font-weight: bold;
-      background-color: #E6E6E6;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="styles/style.css">
+  <title>yeoman</title>
 </head>
-
 <body>
-
-
-  <div id="calendar"></div>
-
-  <script>
-    function createCalendar(elem, year, month) {
-
-      let mon = month - 1; // месяцы в JS идут от 0 до 11, а не от 1 до 12
-      let d = new Date(year, mon);
-
-      let table = '<table><tr><th>пн</th><th>вт</th><th>ср</th><th>чт</th><th>пт</th><th>сб</th><th>вс</th></tr><tr>';
-
-      // пробелы для первого ряда
-      // с понедельника до первого дня месяца
-      // * * * 1  2  3  4
-      for (let i = 0; i < getDay(d); i++) {
-        table += '<td></td>';
-      }
-
-      console.log(getDay(d))
-
-      // <td> ячейки календаря с датами
-      while (d.getMonth() == mon) {
-        table += '<td>' + d.getDate() + '</td>';
-
-        if (getDay(d) % 7 == 6) { // вс, последний день - перевод строки
-          table += '</tr><tr>';
-        }
-
-        d.setDate(d.getDate() + 1);
-      }
-
-      // добить таблицу пустыми ячейками, если нужно
-      // 29 30 31 * * * *
-      if (getDay(d) != 0) {
-        for (let i = getDay(d); i < 7; i++) {
-          table += '<td></td>';
-        }
-      }
-
-      // закрыть таблицу
-      table += '</tr></table>';
-
-      elem.innerHTML = table;
-    }
-
-    function getDay(date) { // получить номер дня недели, от 0 (пн) до 6 (вс)
-      let day = date.getDay();
-      if (day == 0) day = 7; // сделать воскресенье (0) последним днем
-      return day - 1;
-    }
-
-    createCalendar(calendar, 2012, 9);
-  </script>
-
+  <h1></h1>
+<script src="js/function.js"></script>
 </body>
 </html>
