--- a/src/index.html
+++ b/src/index.html
@@ -8,26 +8,7 @@
   <title>yeoman</title>
 </head>
 <body>
-  <div class="calend-wrap">
-    <div class="calend-header">
-      <p>Year</p>
-      <p>Month</p> 
-    </div>
-    <div class="calend-table">
-      <table id='tbl'>
-        <caption>Today</caption>
-        <tr>
-          <th>Пн</th>
-          <th>Вт</th>
-          <th>Ср</th>
-          <th>Чт</th>
-          <th>Пт</th>
-          <th>Сб</th>
-          <th>Вс</th>
-        </tr>       
-      </table>
-    </div>
-  </div>
+<h1>\Главная/</h1>
 <script src="js/function.js"></script>
 </body>
 </html>
