--- a/src/countdown.html
+++ b/src/countdown.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/countdown.css">
   <title>yeoman</title>
 </head>
 <body>
-<h1>\2019/</h1>
-<script src="js/function.js"></script>
+  <div class="container container_paddingtop">
+    <h1>До Нового Года осталось</h1>
+    <div class="timer"></div>
+  </div>
+<script src="js/countdown.js"></script>
 </body>
 </html>
