--- a/src/regexp.html
+++ b/src/regexp.html
@@ -8,7 +8,7 @@
   <title>yeoman</title>
 </head>
 <body>
-<h1>\2019/</h1>
-<script src="js/function.js"></script>
+<h1>\Регулярные выражения/</h1>
+<script src="js/regexp.js"></script>
 </body>
 </html>
