--- a/src/regexp.html
+++ b/src/regexp.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <h1>\Регулярные выражения/</h1>
+<input type="text" id="inp" />
+<button id="cl">Check</button>
 <script src="js/regexp.js"></script>
 </body>
 </html>
