--- a/src/regexp.html
+++ b/src/regexp.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1>\Регулярные выражения/</h1>
+<h2>email reg is ( /^\w{1,}@\w{2,}\.\w{2,}$/ )</h2>
 <input type="text" id="inp" />
 <button id="cl">Check</button>
 <script src="js/regexp.js"></script>
